2004-09-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Add g_assert_warning.

	* glib/gmessages.h:
	* glib/gmessages.c (g_assert_warning): Treat g_assert 
	in the same way as g_return_if_fail and move the string 
	constants into a helper function, which also takes 
	care of removing the "IA__" prefix from internal aliases.

	* glib/gmessages.h: Move the declaration of 
	g_return_if_fail_warning() out of the ifdefs, so that
	building with G_DISABLE_ASSERT works.

2004-09-27  Murray Cumming  <murrayc@murrayc.com>

	* glib/goptions.[h|c], glib/glib.symbols: Rename 
	g_context_option_error_quark() to g_option_error_quark(), because that 
	is consistent with normal naming conventions, and what bindings expect.

.2004-09-26  Matthias Clasen  <mclasen@redhat.com>

	Fix #153649, Hidetaka Iwai:
	
	* glib/goption.c (parse_long_option): Don't forget to set parsed
	to TRUE when parsing a long ARG_NONE option. 
	(free_changes_list): Fix the memory management for string
	and filename arrays.

2004-09-22  Tor Lillqvist  <tml@iki.fi>

	* glib/gmessages.c: [Win32] Don't ever open a console
	window. (Which we used to do if standard output or standard error
	are invalid, as they are for GUI applications.) These console
	windows that open up unexpectedly have caused endless amounts of
	confusion among end-users. (#141102, #151175)

	Don't output the process id on Windows. Only output the program
	name. If not set with g_set_prgname(), fetch the application
	executable's name and use that.

Mon Sep 20 00:35:14 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gutf8.c (g_utf16_to_utf8): Add a note explaining how to
	convert UTF-16 byte stream of ambiguous endianness.  (#152954,
	Linus Walleij)

Mon Sep 20 00:17:37 2004  Matthias Clasen  <maclas@gmx.de>

	* tests/option-test.c (error_test3_post_parse): 
	* tests/option-test.c (error_test2_post_parse): 
	* tests/option-test.c (error_test1_post_parse): Don't call 