@@ -1,3 +1,8 @@
+2004-09-30  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gfileutils.c: Convert filenames to UTF-8 before 
+	putting them in GErrors.  (#154078, Morten Welinder)
+
 2004-09-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/glib.symbols: Add g_assert_warning.
